# evo_dm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: README.md
evodm/: __init__.py  calculate_selectivity.py  data.py  dpsolve.py  est_growth_rates.py  evol_game.py  exp.py  hgt_exp.py  learner.py  seascapes_exp.py  theoretical_model_compute.py  tianshou_learner.py
evodm/examples/: mira_mdp.py
log/RL/: best_policy_sswm.pth  events.out.tfevents.1763610148.VEDANTI.local.95930.0
notebooks/: README.md
results/: .gitkeep
scripts/: README.md  organize_imports.sh
tests/: __init__.py  conftest.py  test_dpsolve.py  test_evol_game.py  test_exp.py  test_hgt_exp.py  test_landscapes.py  test_learner.py  test_theoretical_model_compute.py  test_tianshou_learner.py
