[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evodm"
version = "1.1.2"
description = "RL-Based Method to Controlling Bacterial and Carcinomic Populations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Davis Weaver", email = "dtw43@case.edu"},
]
keywords = ["reinforcement-learning", "evolution", "drug-selection", "mdp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "tensorflow~=2.18.0",
    "numpy",
    "scipy",
    "networkx",
    "tqdm",
    "pymdptoolbox",
    "pandas",
    "matplotlib",
    "ruptures",
    "torch>=2.8.0",
    "tianshou>=0.5.1",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/DavisWeaver/evo_dm"
Repository = "https://github.com/DavisWeaver/evo_dm"
Issues = "https://github.com/DavisWeaver/evo_dm/issues"

[tool.setuptools]
packages = ["evodm", "evodm.examples"]

[tool.setuptools.package-data]
evodm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
packages = ["evodm"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["I"]  # Import sorting
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["evodm"]

